--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.griddy {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.gridItem{
+  border: 1px solid black;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
